test/corpus/style_block.txt
====================================================
STYLE block with no trailing spaces or tabs
====================================================

WEBVTT

STYLE
size: 10px;
width: 150px;


----

(source_file
      (webvtt_block
        (webvtt_keyword))
      (style_block
        (style_keyword)
        (text_including_terminator)
        (text_including_terminator)))

====================================================
STYLE block with trailing spaces
====================================================

WEBVTT

STYLE     
size: 10px;
width: 150px;


----

(source_file
      (webvtt_block
        (webvtt_keyword))
      (style_block
        (style_keyword)
        (text_including_terminator)
        (text_including_terminator)))

====================================================
STYLE block with trailing tabs
====================================================

WEBVTT

STYLE		
size: 10px;
width: 150px;


----

(source_file
      (webvtt_block
        (webvtt_keyword))
      (style_block
        (style_keyword)
        (text_including_terminator)
        (text_including_terminator)))

====================================================
STYLE block with mangled STYLE keyword
:error
====================================================

WEBVTT

StYle
size: 10px;


----

(source_file
      (webvtt_block
        (webvtt_keyword))
      (style_block
        (style_keyword)))

====================================================
STYLE block with arrow in a style
:error
====================================================

WEBVTT

STYLE
size: -->;


----

(source_file
      (webvtt_block
        (webvtt_keyword))
      (style_block
        (style_keyword)))

